@@ -132,6 +132,13 @@ public class DefaultTraversal<S, E> implements Traversal.Admin<S, E> {
         // steps get reId'd and traverser requirements are set.
         if (isRoot() || this.getParent() instanceof VertexProgramStep) {
 
+            // prepare the traversal and all its children for strategy application
+            TraversalHelper.applyTraversalRecursively(t -> {
+                if (hasGraph) t.setGraph(this.graph);
+                t.setStrategies(this.strategies);
+                t.setSideEffects(this.sideEffects);
+            }, this);
+
             // note that prior to applying strategies to children we used to set side-effects and strategies of all
             // children to that of the parent. under this revised model of strategy application from TINKERPOP-1568
             // it doesn't appear to be necessary to do that (at least from the perspective of the test suite). by,
@@ -148,7 +155,6 @@ public class DefaultTraversal<S, E> implements Traversal.Admin<S, E> {
             TraversalHelper.applyTraversalRecursively(t -> {
                 if (hasGraph) t.setGraph(this.graph);
                 if(!(t.isRoot()) && t != this && !t.isLocked()) {
-                    t.setStrategies(new DefaultTraversalStrategies());
                     t.setSideEffects(this.sideEffects);
                     t.applyStrategies();
                 }
